Overflow issu solved in hole website

--- a/src/Common/Common.css
+++ b/src/Common/Common.css
@@ -1,7 +1,15 @@
+body{
+  margin: 0;
+  padding: 0;
+  /* overflow: hidden; */
+  overflow-x: hidden;
+}
 .common-width{
   width: 80%;
   margin: auto;
+  /* overflow: hidden; */
 }
+
 
 .menu2{
  display: flex;
