--- a/src/Components/AboutMe/AboutMe.css
+++ b/src/Components/AboutMe/AboutMe.css
@@ -7,8 +7,8 @@
   /* height: 100%;
   width: 100%; */
   position: relative;
-  border-left: 12px solid rgb(15, 29, 54);
-  border-bottom: 10px solid rgb(15, 29, 54);
+  border-left: 12px solid #0F172A;
+  border-bottom: 10px solid #0F172A;
   
   /* border: 10px solid rgb(15, 29, 54); */
 }
@@ -23,7 +23,7 @@
   height: 100%;
   width: 100%;
   padding-bottom: 20px;
-  border: 7px solid #25c6f7;
+  border: 7px solid #38BDF8;
   z-index: -1;
 }
 .secound-title{
